# rmachine

./: Cargo.toml  README.md  rustfmt.toml
examples/: Cargo.toml  channel.rs  lightbulb.rs
examples/src/: philosophers.rs
rmachine/: Cargo.toml
rmachine/src/: api.rs  context.rs  executor.rs  lib.rs  machine.rs  prelude.rs  spawner.rs  util.rs
rmachine/src/channel/: atomic_waker.rs  mod.rs
rmachine/src/channel/mpsc/: mod.rs
rmachine/src/channel/oneshot/: mod.rs
rmachine/src/channel/spsc/: mod.rs  sink_impl.rs
rmachine/src/channel/watch/: mod.rs
