[package]
name = "rmachine-examples"
version = "0.1.0"
authors = ["bellau <laurent.belmonte@gmail.com>"]
edition = "2018"

[[bin]]
name = "philosophers"
path = "src/philosophers.rs"

[dependencies]
futures = "^0.3"
async-trait = "^0.1"
async-stream = "0.2"
rand = "0.7.3"
futures-timer = "3.0.2"
async-std = { version = "1.5.0", features = ["unstable"] }
log = "0.4"
tokio = { version = "0.2", features = ["full"] }
env_logger = "0.7"
rmachine = {path="../rmachine"}
